Fixed: window z-index issue

--- a/src/main/webapp/styles/base.css
+++ b/src/main/webapp/styles/base.css
@@ -15,12 +15,10 @@
 
 .hidden {
 	display: none;
-	transition: all 0.5s;
 }
 
 .invisible {
 	opacity: 0;
-	transition: all 0.5s;
 }
 
 body {
