--- a/src/main/webapp/styles/window.css
+++ b/src/main/webapp/styles/window.css
@@ -6,7 +6,7 @@
 
 .window,
 .window * {
-	transition: all 0.5s, left 0.01s, top 0.01s;
+	transition: all 0.5s, z-index 0.01s, left 0.01s, top 0.01s;
 }
 
 .window .window_title {
